--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#ignore project structure files
+git rm --cached --ignore-unmatch NetCracker-TaskManager.iml
+git rm --cached --ignore-unmatch TaskManager.iml
+git rm --cached --ignore-unmatch .idea
