--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ hs_err_pid*
 git rm --cached --ignore-unmatch NetCracker-TaskManager.iml
 git rm --cached --ignore-unmatch TaskManager.iml
 git rm --cached --ignore-unmatch .idea
+git rm --cached --ignore-unmatch out
